--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
