--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.11.2",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.1",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0"
   },
