--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.1",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0"
   },
